add all recur types
